# alphanet

./: .dockerignore  .gitignore  .gitmodules  CODEOWNERS  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.cross  Makefile  README.md  clippy.toml  rustfmt.toml
.config/: nextest.toml
.github/scripts/: compare_precompile_bench.sh
.github/workflows/: bench.yml  dependencies.yml  docker.yml  integration.yml  lint.yml  unit.yml
crates/instructions/: Cargo.toml
crates/instructions/src/: context.rs  eip3074.rs  lib.rs
crates/node/: Cargo.toml
crates/node/src/: chainspec.rs  evm.rs  lib.rs  node.rs
crates/precompile/: Cargo.toml
crates/precompile/benches/: bls12_381.rs
crates/precompile/src/: addresses.rs  bls12_381.rs  lib.rs  secp256r1.rs
crates/precompile/test-vectors/: README.md  blsG1Add.json  blsG1MSM.json  blsG1Mul.json  blsG2Add.json  blsG2Mul.json  blsG2MultiExp.json  blsMapG1.json  blsMapG2.json  blsPairing.json
crates/testing/: Cargo.toml
crates/testing/resources/bls12-381/src/: BlsG1AddCaller.sol
crates/testing/resources/eip3074/: foundry.toml
crates/testing/resources/eip3074/src/: BaseAuth.sol  GasSponsorInvoker.sol  MockContract.sol  SenderRecorder.sol
crates/testing/src/: chain_spec_builder.rs  lib.rs  main.rs  test_suite.rs  tests.rs  wallet.rs
crates/wallet/: Cargo.toml
crates/wallet/src/: lib.rs
etc/: alphanet-rollup.json  dev-genesis.json  kurtosis.yaml
etc/deploy-config/: sepolia.json
testing/eip3074/src/: BaseAuth.sol
