[workspace]
members = [
    "bin/alphanet/",
    "crates/node",
    "crates/precompile",
    "crates/testing",
]
default-members = ["bin/alphanet/"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.80"
authors = []
license = "MIT OR Apache-2.0"
repository = "https://github.com/paradigmxyz/alphanet"
keywords = ["ethereum", "crypto"]
categories = ["cryptography", "cryptography::cryptocurrencies"]

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.lints.clippy]
dbg-macro = "warn"
manual-string-new = "warn"
uninlined-format-args = "warn"
use-self = "warn"

[workspace.lints.rust]
rust-2018-idioms = "deny"
unreachable-pub = "warn"
unused-must-use = "deny"
missing_docs = "warn"

[workspace.lints.rustdoc]
all = "warn"

[profile.release]
strip = "debuginfo"
lto = "thin"
panic = "unwind"
codegen-units = 1
incremental = false

[workspace.dependencies]
# alphanet
alphanet-node = { path = "crates/node" }
alphanet-precompile = { path = "crates/precompile" }

alloy = { version = "0.2", features = [
    "contract",
    "providers",
    "provider-http",
    "signers",
] }
alloy-network = { version = "0.2" }
alloy-signer-local = { version = "0.2", features = ["mnemonic"] }

# tokio
tokio = { version = "1.21", default-features = false }

# reth
reth = { git = "https://github.com/paradigmxyz/reth.git", branch = "onbjerg/frontiers", features = [
    "optimism",
] }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git", branch = "onbjerg/frontiers" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth.git", branch = "onbjerg/frontiers" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git", branch = "onbjerg/frontiers" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth.git", branch = "onbjerg/frontiers" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth.git", branch = "onbjerg/frontiers" }
reth-node-optimism = { git = "https://github.com/paradigmxyz/reth.git", branch = "onbjerg/frontiers" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", branch = "onbjerg/frontiers" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git", branch = "onbjerg/frontiers" }

# misc
clap = "4"
eyre = "0.6.12"
tracing = "0.1.0"

# misc-testing
rstest = "0.18.2"

[patch.crates-io]
# ignore this part lol
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "fd159f6" }
alloy-eips = { git = "https://github.com/alloy-rs/alloy", rev = "fd159f6" }
alloy-network = { git = "https://github.com/alloy-rs/alloy", rev = "fd159f6" }
alloy-signer-local = { git = "https://github.com/alloy-rs/alloy", rev = "fd159f6" }
alloy-rpc-types-engine = { git = "https://github.com/alloy-rs/alloy", rev = "fd159f6" }
alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "fd159f6" }
alloy-genesis = { git = "https://github.com/alloy-rs/alloy", rev = "fd159f6" }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy", rev = "fd159f6" }
alloy-node-bindings = { git = "https://github.com/alloy-rs/alloy", rev = "fd159f6" }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", rev = "fd159f6" }
alloy-pubsub = { git = "https://github.com/alloy-rs/alloy", rev = "fd159f6" }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy", rev = "fd159f6" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "fd159f6" }
alloy-rpc-types-admin = { git = "https://github.com/alloy-rs/alloy", rev = "fd159f6" }
alloy-rpc-types-anvil = { git = "https://github.com/alloy-rs/alloy", rev = "fd159f6" }
alloy-rpc-types-beacon = { git = "https://github.com/alloy-rs/alloy", rev = "fd159f6" }
alloy-rpc-types-eth = { git = "https://github.com/alloy-rs/alloy", rev = "fd159f6" }
alloy-rpc-types-mev = { git = "https://github.com/alloy-rs/alloy", rev = "fd159f6" }
alloy-rpc-types-trace = { git = "https://github.com/alloy-rs/alloy", rev = "fd159f6" }
alloy-rpc-types-txpool = { git = "https://github.com/alloy-rs/alloy", rev = "fd159f6" }
alloy-serde = { git = "https://github.com/alloy-rs/alloy", rev = "fd159f6" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", rev = "fd159f6" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy", rev = "fd159f6" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", rev = "fd159f6" }
alloy-transport-ipc = { git = "https://github.com/alloy-rs/alloy", rev = "fd159f6" }
alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy", rev = "fd159f6" }
revm = { git = "https://github.com/bluealloy/revm", branch = "rakita/latest_eip7702" }
revm-primitives = { git = "https://github.com/bluealloy/revm", branch = "rakita/latest_eip7702" }
