[workspace]
members = [
    "bin/alphanet/",
    "crates/node",
    "crates/precompile",
    "crates/testing",
    "crates/wallet",
]
default-members = ["bin/alphanet/"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.81"
authors = []
license = "MIT OR Apache-2.0"
repository = "https://github.com/paradigmxyz/alphanet"
keywords = ["ethereum", "crypto"]
categories = ["cryptography", "cryptography::cryptocurrencies"]

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.lints.clippy]
dbg-macro = "warn"
manual-string-new = "warn"
uninlined-format-args = "warn"
use-self = "warn"

[workspace.lints.rust]
rust-2018-idioms = "deny"
unreachable-pub = "warn"
unused-must-use = "deny"
missing_docs = "warn"

[workspace.lints.rustdoc]
all = "warn"

[profile.release]
opt-level = 3
lto = "thin"
debug = "line-tables-only"
strip = true
panic = "unwind"
codegen-units = 16

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
inherits = "release"
debug = 2
strip = false

[workspace.dependencies]
# alphanet
alphanet-node = { path = "crates/node" }
alphanet-precompile = { path = "crates/precompile" }
alphanet-wallet = { path = "crates/wallet" }

alloy = { version = "0.4", features = [
    "contract",
    "providers",
    "provider-http",
    "signers",
] }
alloy-network = { version = "0.4" }
alloy-primitives = { version = "0.8.5" }
alloy-rpc-types = { version = "0.4" }
alloy-signer-local = { version = "0.4", features = ["mnemonic"] }

# tokio
tokio = { version = "1.21", default-features = false }

# reth
reth = { git = "https://github.com/paradigmxyz/reth.git", rev = "946f1a4" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git", rev = "946f1a4", features = [
    "optimism",
] }
reth-cli = { git = "https://github.com/paradigmxyz/reth.git", rev = "946f1a4" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth.git", rev = "946f1a4" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "946f1a4" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "946f1a4" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth.git", rev = "946f1a4" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth.git", rev = "946f1a4", features = [
    "optimism",
] }
reth-optimism-node = { git = "https://github.com/paradigmxyz/reth.git", rev = "946f1a4", features = [
    "optimism",
] }
reth-optimism-cli = { git = "https://github.com/paradigmxyz/reth.git", rev = "946f1a4", features = [
    "optimism",
] }
reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth.git", rev = "946f1a4", features = [
    "optimism",
] }
reth-optimism-forks = { git = "https://github.com/paradigmxyz/reth.git", rev = "946f1a4" }
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth.git", rev = "946f1a4" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", rev = "946f1a4" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "946f1a4", features = [
    "optimism",
] }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git", rev = "946f1a4", features = [
    "optimism",
] }
reth-revm = { git = "https://github.com/paradigmxyz/reth.git", rev = "946f1a4", features = [
    "optimism",
] }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "946f1a4" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git", rev = "946f1a4" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth.git", rev = "946f1a4" }
reth-exex = { git = "https://github.com/paradigmxyz/reth.git", rev = "946f1a4" }
# rpc
jsonrpsee = "0.24"

# misc
clap = "4"
eyre = "0.6.12"
tracing = "0.1.0"
serde = "1"
serde_json = "1"
once_cell = "1.19"
thiserror = "1"

# misc-testing
rstest = "0.18.2"
