[package]
name = "alphanet-instructions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
revm.workspace = true
revm-interpreter.workspace = true
revm-precompile.workspace = true
revm-primitives.workspace = true

[dev-dependencies]
secp256k1 = { version = "0.28.2", default-features = false, features = [
    "alloc",
    "recovery",
    "rand-std"
] }

[features]
optimism = [
  "revm/optimism",
  "revm-interpreter/optimism",
  "revm-precompile/optimism",
  "revm-primitives/optimism",
]

[lints]
workspace = true
