[package]
name = "alphanet-instructions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
reth.workspace = true
revm.workspace = true
revm-precompile.workspace = true
revm-primitives.workspace = true

[dev-dependencies]
reth.workspace = true
reth-node-api.workspace = true
secp256k1 = { version = "0.28.2", default-features = false, features = [
    "alloc",
    "recovery",
    "rand-std"
] }

[features]
optimism = [
  "revm/optimism",
  "revm-precompile/optimism",
  "revm-primitives/optimism",
]

[lints]
workspace = true
