[package]
name = "alphanet-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
alphanet-precompile.workspace = true
reth.workspace = true
reth-node-api.workspace = true
reth-node-optimism.workspace = true
reth-chainspec.workspace = true

eip3074-instructions.workspace = true

eyre.workspace = true

[features]
default = [
  "alphanet-precompile/optimism",
  "reth/optimism",
  "reth-node-optimism/optimism",
]

[lints]
workspace = true
