[package]
name = "alphanet-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
alphanet-precompile.workspace = true
once_cell.workspace = true
reth-cli.workspace = true
reth-node-api.workspace = true
reth-node-builder.workspace = true
reth-optimism-node.workspace = true
reth-optimism-forks.workspace = true
reth-optimism-chainspec.workspace = true
reth-chainspec.workspace = true
reth-payload-builder.workspace = true
reth-primitives.workspace = true
reth-revm.workspace = true
reth-transaction-pool.workspace = true

alloy-primitives.workspace = true

serde_json.workspace = true

eyre.workspace = true

[lints]
workspace = true
