[package]
name = "alphanet-precompile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
revm-precompile.workspace = true
revm-primitives.workspace = true

blst = "0.3.11"
p256 = { version = "0.13.2", features = ["ecdsa"] }

[dev-dependencies]
criterion.workspace = true
eyre.workspace = true
rstest.workspace = true
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.115"

[features]
optimism = [
  "revm-precompile/optimism",
  "revm-primitives/optimism",
]

[lints]
workspace = true

[[bench]]
name = "bls12_381"
harness = false
