[package]
name = "alphanet-precompile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
reth.workspace = true
revm.workspace = true

p256 = { version = "0.13.2", features = ["ecdsa"] }

[dev-dependencies]
reth-node-api.workspace = true
eyre.workspace = true
rstest.workspace = true

[features]
optimism = [
  "reth/optimism",
  "revm/optimism"
]

[lints]
workspace = true
