[package]
name = "alphanet-precompile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
reth-revm.workspace = true
p256 = { version = "0.13.2", features = ["ecdsa"] }

[dev-dependencies]
reth-node-api.workspace = true
reth-chainspec.workspace = true
reth-primitives.workspace = true
eyre.workspace = true
rstest.workspace = true

[lints]
workspace = true
