[package]
name = "alphanet-testing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dev-dependencies]
alphanet-node.workspace = true

alloy.workspace = true
alloy-network.workspace = true
alloy-signer-wallet = { workspace = true, features = ["mnemonic"] }

reth.workspace = true
reth-node-core.workspace = true
reth-primitives.workspace = true
reth-tracing.workspace = true

once_cell = "1.19.0"
tokio.workspace = true
url = "2.5.0"

[features]
default = [
  "reth/optimism",
  "reth-node-core/optimism",
  "reth-primitives/optimism",
]

[lints]
workspace = true
