[package]
name = "alphanet-testing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dev-dependencies]
alphanet-node.workspace = true

reth-e2e-test-utils.workspace = true
reth-node-core.workspace = true
reth-node-optimism.workspace = true
reth-payload-builder.workspace = true
reth-primitives.workspace = true
reth-tracing.workspace = true

alloy-eips.workspace = true
eyre.workspace = true
tokio.workspace = true

[lints]
workspace = true
