[package]
name = "alphanet-wallet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types.workspace = true
jsonrpsee = { workspace = true, features = ["server", "macros"] }
reth-primitives.workspace = true
reth-storage-api.workspace = true
reth-rpc-eth-api.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
jsonrpsee = { workspace = true, features = ["server", "client", "macros"] }

[lints]
workspace = true
